--- a/APP.KMX/APP.KMX.csproj
+++ b/APP.KMX/APP.KMX.csproj
@@ -11,4 +11,8 @@
     <Folder Include="wwwroot\html\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.102.2" />
+  </ItemGroup>
+
 </Project>
