--- a/APP.KMX/APP.KMX.csproj
+++ b/APP.KMX/APP.KMX.csproj
@@ -14,7 +14,7 @@
     <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <PackageReference Include="ClosedXML" Version="0.102.2" />
     <PackageReference Include="CoordinateSharp" Version="2.22.1.1" />
     <PackageReference Include="GeoCoordinate" Version="2.0.1" />
@@ -22,6 +22,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
     <PackageReference Include="Proj4Net" Version="1.0.0" />
     <PackageReference Include="ProjNET4GeoAPI" Version="1.4.1" />
+  </ItemGroup>-->
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\APP.KMX.Library\APP.KMX.Core.csproj" />
   </ItemGroup>
 
 </Project>
