--- a/APP.KMX/APP.KMX.csproj
+++ b/APP.KMX/APP.KMX.csproj
@@ -10,19 +10,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="Views\Login\" />
     <Folder Include="wwwroot\html\" />
     <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
-  <!--<ItemGroup>
-    <PackageReference Include="ClosedXML" Version="0.102.2" />
-    <PackageReference Include="CoordinateSharp" Version="2.22.1.1" />
-    <PackageReference Include="GeoCoordinate" Version="2.0.1" />
-    <PackageReference Include="GeoCoordinate.NetCore" Version="1.0.0.1" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.6" />
-    <PackageReference Include="Proj4Net" Version="1.0.0" />
-    <PackageReference Include="ProjNET4GeoAPI" Version="1.4.1" />
-  </ItemGroup>-->
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Identity.EntityFramework" Version="2.2.4" />
+    <PackageReference Include="Microsoft.AspNet.Identity.Owin" Version="2.2.4" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\APP.KMX.Library\APP.KMX.Core.csproj" />
