fix: Missing project reference - APP.KMX.Core

--- a/APP.KMX.App/APP.KMX.App.csproj
+++ b/APP.KMX.App/APP.KMX.App.csproj
@@ -26,7 +26,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\APP.KMX.Library\APP.KMX.Core.csproj" />
+    <ProjectReference Include="..\APP.KMX.Library\APP.KMX.Core.csproj" />
   </ItemGroup>
+
 
 </Project>
