--- a/APP.KMX/APP.KMX.csproj
+++ b/APP.KMX/APP.KMX.csproj
@@ -22,7 +22,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\APP.KMX.Library\APP.KMX.Core.csproj" />
+    <ProjectReference Include="..\APP.KMX.Library\APP.KMX.Core.csproj" />
   </ItemGroup>
 
 </Project>
